--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,7 +16,7 @@
     "knip": "knip"
   },
   "engines": {
-    "node": "20.x"
+    "node": "24.x"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
@@ -46,15 +46,11 @@
     "@stripe/stripe-js": "^2.2.0",
     "@tanstack/react-query": "^5.8.4",
     "@tanstack/react-table": "^8.21.3",
-    "@types/node": "20.6.0",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
     "@vercel/analytics": "^1.1.1",
     "@vercel/node": "^5.1.14",
     "@vercel/toolbar": "^0.1.34",
     "@vis.gl/react-google-maps": "^1.0.2",
     "antd": "^5.11.1",
-    "autoprefixer": "10.4.15",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -65,7 +61,6 @@
     "eslint": "8.49.0",
     "firebase": "^11.6.0",
     "firebase-admin": "^13.3.0",
-    "firebase-tools": "^13.11.2",
     "flags": "^3.1.1",
     "framer-motion": "^10.16.4",
     "js-cookie": "^3.0.5",
@@ -90,9 +85,6 @@
     "sonner": "^2.0.3",
     "stripe": "^14.5.0",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss": "3.3.3",
-    "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.2.2",
     "vaul": "^1.1.2",
     "zod": "^3.24.3"
   },
@@ -101,7 +93,7 @@
     "@react-email/preview-server": "4.1.3",
     "@testing-library/react": "^14.2.0",
     "@types/jest": "^29.5.12",
-    "@types/node": "^24.2.1",
+    "@types/node": "^24.10.1",
     "@types/qrcode.react": "^3.0.0",
     "dotenv": "^17.2.0",
     "eslint-config-next": "^14.2.23",
@@ -111,7 +103,12 @@
     "qrcode": "^1.5.4",
     "react-email": "4.1.3",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.4",
     "typescript": "^5.9.2",
-    "tsx": "^4.20.4"
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "10.4.15",
+    "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
