--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,7 +9,7 @@
     "build": "next build",
     "typecheck": "tsc --noEmit",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
     "test": "jest",
     "test:watch": "jest --watch",
     "postinstall": "prisma generate",
@@ -58,23 +58,23 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "embla-carousel-react": "^8.6.0",
-    "eslint": "8.49.0",
+    "eslint": "^9",
     "firebase": "^11.6.0",
     "firebase-admin": "^13.3.0",
     "flags": "^3.1.1",
-    "framer-motion": "^10.16.4",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^8.5.1",
     "lucide-react": "^0.503.0",
     "micro": "^10.0.1",
-    "next": "^14.2.26",
+    "motion": "^12.23.25",
+    "next": "16.0.10",
     "postcss": "8.4.29",
     "posthog-js": "^1.255.1",
     "posthog-node": "^5.1.1",
     "qrcode.react": "^4.2.0",
-    "react": "18",
+    "react": "19.2.1",
     "react-day-picker": "8.10.1",
-    "react-dom": "18",
+    "react-dom": "19.2.1",
     "react-error-boundary": "^4.0.11",
     "react-google-autocomplete": "^2.7.3",
     "react-google-maps": "^9.4.5",
@@ -95,20 +95,24 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^24.10.1",
     "@types/qrcode.react": "^3.0.0",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
+    "autoprefixer": "10.4.15",
     "dotenv": "^17.2.0",
-    "eslint-config-next": "^14.2.23",
+    "eslint-config-next": "16.0.7",
     "knip": "^5.62.0",
     "ngrok": "^5.0.0-beta.2",
     "prisma": "^5.14.0",
     "qrcode": "^1.5.4",
     "react-email": "4.1.3",
+    "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.4",
-    "typescript": "^5.9.2",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.15",
-    "tailwindcss": "3.3.3",
-    "tailwindcss-animate": "^1.0.7"
+    "typescript": "^5.9.2"
+  },
+  "resolutions": {
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3"
   }
 }
